<resources>
    <string name="app_name">Smart Parking</string>
    <string name="priv_terms">Privacy Policy and Terms and Conditions</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="no_internet_msg">No internet connection. Please try again!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_mob_no">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="booked">Booked</string>
    <string name="avail">Available</string>
    <string name="reserved">Reserved</string>
    <string name="Rs">\u20B9</string>

    <string name="price">\u20B9  %1$s</string>
</resources>
