<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tailoredtech.smartparking.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/action_btns">

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <TextView
        android:id="@+id/txt_privacy_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/priv_terms"/>

    <LinearLayout
        android:id="@+id/action_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2"
        android:layout_above="@+id/txt_privacy_terms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sign_btn_selector"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textAllCaps="true"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_fb_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_login"
            android:textAllCaps="true"/>

    </LinearLayout>


</RelativeLayout>
